applications/authentication/overlays/prod/patch-env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentication
spec:
  template:
    spec:
      containers:
        - name: app
