applications/authentication/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authentication
  labels:
    app.kubernetes.io/name: authentication
    app.kubernetes.io/part-of: taptech
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts: [authentication.taptech.net]
      secretName: authentication-tls
  rules:
    - host: authentication.taptech.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: authentication
                port:
                  name: http
